fixed button and display alignment

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 .display {
     margin-top: 25px;
     height: 100px;
-    width: 300px;
+    width: 450px;
     border-radius: 50px;
     color: white;
     background-color: #322c2d;
@@ -104,7 +104,7 @@
 
 
   .box-button {
-       /*border: 5px solid;*/
+       border: 5px solid;
       height: 400px;
       display: flex;
       margin: 2%;
@@ -112,6 +112,8 @@
 
       justify-content: center;
       align-items: center;
-      width: 55%;
+      align-self: center;
+      margin-left: 20%;
+      width: 50%;
   }
 
